# redes-sm

./: README.md
cliente_alertas_py/: cliente_alertas.py  config.json  opcua_servidor.py  requirements.txt
cliente_sensor_cpp/: CMakeLists.txt  main.cpp
servidor_final_py/: database.db  db.py  main.py  opcua_servidor.py  pub_intermedio.pem  requirements.txt
servidor_intermedio_py/: clave_intermedio.pem  main.py  public.pem
